--- a/style.css
+++ b/style.css
@@ -22,9 +22,21 @@ body {
 
 /* ----- zde zacni psat vlastni css ----- */
 
+
+.rubik {
+    font-family: "Rubik", sans-serif;
+    font-optical-sizing: auto;
+    font-weight: 400;
+    font-style: normal;
+  }
+
 body {
+    
     font-family: 'Rubik', sans-serif;
     font-weight: 400;
+    background-color: #f5f5f5;
+    display: flex;
+    justify-content: center;
 }
 
 
@@ -32,3 +44,123 @@ h1 {
     font-weight: 500;
 }
 
+.zbozi{
+    width: 670px;
+    height: 440px;
+    margin: 40px;
+    display: flex;
+    border-radius: 20px;   
+}
+.vizual{
+    flex-basis: 50%;
+    background-image: linear-gradient(to bottom,#06d7c1, #50cc49); 
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    border: 1px solid transparent;
+    border-radius: 10px 0 0 10px;
+ }
+
+.bota{
+        position: absolute;
+        bottom: 0;
+        right: 0;
+    }
+
+.cenovka{
+    position: absolute;
+    bottom: 30px;
+    right: 30px;
+
+}
+.cena{
+    text-align: right;
+}
+.detaily{
+    flex-basis: 50%;
+    width: 355px;
+    padding: 30px;
+    background-color: white;
+    border: 1px solid transparent;
+    border-radius: 0 10px 10px 0;
+
+}
+
+li:hover{
+    border: 1px solid red;
+    border-radius: 50%;
+
+} 
+
+li {
+    padding: 5px;
+    list-style: none;
+    width: 33px;
+    text-align: center;
+    border: 1px solid transparent;
+    border-radius: 50%;
+    cursor: pointer;
+    display: inline-block
+
+
+}
+.vybrana{
+    color: red;
+    border: 1px solid red;
+    border-radius: 50%;
+}
+.slogan{
+    color: white;
+    font-family: 'Rubik', sans-serif;
+    font-size: 16px;
+    font-weight: 500;
+}
+.cena{
+    color: white;
+    font-family: 'Rubik', sans-serif;
+    font-size: 28px;
+    font-weight: 500; 
+}
+.zaruka{
+    color: white;
+    font-family: 'Rubik', sans-serif;
+    font-size: 12px;
+    font-weight: 400; 
+}
+.nazev{
+    color: black;
+    font-family: 'Rubik', sans-serif;
+    font-size: 20px;
+    font-weight: 500; 
+    margin-top: 30px;
+}
+.produkt{
+    color: #959595;
+    font-family: 'Rubik', sans-serif;
+    font-size: 14x;
+    font-weight: 400; 
+}
+.popis{
+    color: black;
+    font-family: 'Rubik', sans-serif;
+    font-size: 14px;
+    font-weight: 400; 
+    border-bottom: 2px solid #06d7c1; 
+    padding-bottom: 30px; 
+}
+
+.tlacitko{
+    background-color: #f15f42;
+    text-transform: uppercase;
+    color: white;
+    list-style: none;
+    text-align: center;
+    border: 1px solid transparent;
+    border-radius: 10px;
+    cursor: pointer;
+    display: inline-block;
+    padding: 5px;
+    text-decoration: none;
+
+    
+}
