--- a/style.css
+++ b/style.css
@@ -59,6 +59,7 @@ h1 {
     flex-direction: column;
     border: 1px solid transparent;
     border-radius: 10px 0 0 10px;
+    padding: 30px 0 30px 30px;
  }
 
 .bota{
